<resources>
    <string name="app_name">Login_App</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">Username:</string>
    <string name="holderUN">Enter Username</string>
    <string name="password">Password:</string>
    <string name="holderPass">Enter Password</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="movie_selection">Movie Selection</string>
    <string name="onward">ONWARD</string>
    <string name="avatar">AVATAR</string>
    <string name="frozen">FROZEN</string>
    <string name="black_widow">BLACK WIDOW</string>
    <string name="angry_birds">ANGRY BIRDS</string>
    <string name="turning_red">TURNING RED</string>
    <string name="parker">PARKER</string>
    <string name="shazam">SHAZAM</string>


    <string name="lorem_ipsum">

        <string name="app_name">CardView</string>
    <string name="orchid">Orchid</string>
    <string name="flower_image_description">Flower Image Description</string>

    </string>

</resources>